--- a/jaksim_ios/Info.plist
+++ b/jaksim_ios/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Pretendard-ExtraBold.otf</string>
 		<string>S-CoreDream-2ExtraLight.otf</string>
 		<string>S-CoreDream-4Regular.otf</string>
 		<string>Pretendard-SemiBold.otf</string>
