--- a/jaksim_ios/GoogleService-Info.plist
+++ b/jaksim_ios/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>256094774409-7aigvph0uhtfp0kio017s7e1cloub43p.apps.googleusercontent.com</string>
+	<string>944615151622-gatauq85tu41bp5nh1gogqlt3j754oir.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.256094774409-7aigvph0uhtfp0kio017s7e1cloub43p</string>
+	<string>com.googleusercontent.apps.944615151622-gatauq85tu41bp5nh1gogqlt3j754oir</string>
 	<key>API_KEY</key>
-	<string>AIzaSyChNVgDaboJGIPmDLq7su8aSI5nrgCXvhw</string>
+	<string>AIzaSyA3kq4UiMODsPMkN_SE6Xo12CqD0ftF5Rs</string>
 	<key>GCM_SENDER_ID</key>
-	<string>256094774409</string>
+	<string>944615151622</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>joongkyu.jaksim-ios</string>
 	<key>PROJECT_ID</key>
-	<string>jaksim-ios</string>
+	<string>jaksim-ios-native</string>
 	<key>STORAGE_BUCKET</key>
-	<string>jaksim-ios.appspot.com</string>
+	<string>jaksim-ios-native.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:256094774409:ios:79df6383a30102bd889258</string>
+	<string>1:944615151622:ios:a7e5528ab67830ad618b87</string>
 </dict>
 </plist>
